[gd_scene load_steps=5 format=3 uid="uid://dq2y8qn3sa5ek"]

[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_1mo04"]
[ext_resource type="Script" path="res://Scripts/audio_stream_player.gd" id="3_dq7a4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08mwy"]

[sub_resource type="AudioStream" id="AudioStream_bj1g2"]

[node name="Ball" type="CharacterBody2D"]
script = ExtResource("1_1mo04")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_08mwy")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStream_bj1g2")
volume_db = -10.0
script = ExtResource("3_dq7a4")

[connection signal="ball_collision" from="." to="AudioStreamPlayer" method="_on_ball_ball_collision"]
[connection signal="cpu_score" from="." to="AudioStreamPlayer" method="_on_ball_cpu_score"]
[connection signal="user_score" from="." to="AudioStreamPlayer" method="_on_ball_user_score"]
